--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,11 @@
-<div id="container">
-  <strong>{{ name }}</strong>
-  <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+<div class="container-header">
+  <div class="header">
+
+  </div>
+  <div class="header-name">
+    <ion-avatar class="avatar">
+      <img src="/assets/profile.png" class="img-avatar">
+    </ion-avatar>
+    <p><strong>Jeremy León</strong></p>
+  </div>
 </div>
