--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,90 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" [hidden]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Mis Datos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="container">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Mis Datos</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <app-explore-container name="Tab 1 page">
+
+  </app-explore-container>
+  <div class="content">
+    <div>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="6" class="col1">
+
+            <ion-row class="col2">
+              <ion-col size="2">
+                <div>
+                  <ion-icon name="calendar"></ion-icon>
+                </div>
+              </ion-col>
+              <ion-col>
+                <div class="text">21 Marzo, 2001</div>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+          <ion-col size="6">
+            <ion-row class="col2">
+              <ion-col size="2">
+                <ion-icon name="call"></ion-icon>
+              </ion-col>
+              <ion-col>
+                <div class="text">(+593) 984530789</div>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="6" class="col1">
+
+            <ion-row class="col2">
+              <ion-col size="2">
+                <div>
+                  <ion-icon name="location"></ion-icon>
+                </div>
+              </ion-col>
+              <ion-col>
+                <div class="text">Pichincha,Quito</div>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+          <ion-col size="6">
+            <ion-row class="col2">
+              <ion-col size="2">
+                <ion-icon name="mail"></ion-icon>
+              </ion-col>
+              <ion-col>
+                <div class="text">jeremisma2001@hotmail.com</div>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <div class="divider">
+      </div>
+    </div>
+    <div>
+      <p class="text2">Soy una persona talentosa, ambiciosa y trabajadora, con amplias
+        habilidades y experiencia en herramientas de prototipado, desarrollo de
+        software.</p>
+      <p class="text2">
+        Además, soy capaz de manejar múltiples tareas a diario de manera
+        competente y en trabajar bien bajo presión.</p>
+      <p class="text2">
+        Una fortaleza clave es la comunicación; construir relaciones sólidas con las
+        personas para ofrecer los mejores resultados.</p>
+    </div>
+
+  </div>
+
 </ion-content>
