--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true"  [hidden]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+     Educación y Formación
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Educación y Formación</ion-title>
     </ion-toolbar>
   </ion-header>
 
