--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,18 +2,24 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label>Mis Datos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="code-working-outline"></ion-icon>
+      <ion-label>Experiencia</ion-label>
+      <ion-label>Laboral</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="document-text-outline"></ion-icon>
+      <ion-label>Educación y</ion-label>
+      <ion-label>Formación</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="tab4">
+      <ion-icon name="podium-outline"></ion-icon>
+      <ion-label>Competencias</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
