Finalización CV in Ionic

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
-<ion-header [translucent]="true"  [hidden]="true">
+<ion-header [translucent]="true" [hidden]="true">
   <ion-toolbar>
     <ion-title>
-     Educación y Formación
+      Educación y Formación
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,93 @@
       <ion-title size="large">Educación y Formación</ion-title>
     </ion-toolbar>
   </ion-header>
-
   <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-infinite-scroll>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title><strong>Educación y Formación</strong></ion-card-title>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Bachiller General en Ciencias </ion-card-title>
+        <ion-card-subtitle color="dark">Clear Minds Consultores Cia. Ltda</ion-card-subtitle>
+        <ion-card-subtitle color="primary">20/12/2021 – 20/04/2022</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Tecnólogo Superior en Desarrollo de Software </ion-card-title>
+        <ion-card-subtitle color="dark">Escuela de formación de tecnólogos | Escuela Politécnica Nacional
+        </ion-card-subtitle>
+        <ion-card-subtitle color="primary">2018 – ACTUAL</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>NDG Linux Unhatched</ion-card-title>
+        <ion-card-subtitle color="dark">Cisco Networking Academy </ion-card-subtitle>
+        <ion-card-subtitle color="primary">20/12/2020 – 28/12/2020 </ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>NDG Linux Essentials</ion-card-title>
+        <ion-card-subtitle color="dark">Cisco Networking Academy </ion-card-subtitle>
+        <ion-card-subtitle color="primary">01/02/2021 – 08/03/2021 </ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Salud Digital </ion-card-title>
+        <ion-card-subtitle color="dark">Capacítate para el Empleo | Fundación Carlos Slim </ion-card-subtitle>
+        <ion-card-subtitle color="primary">15/04/2021 – 15/04/2021</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Introducción al desarrollo de aplicaciones móviles con App Inventor</ion-card-title>
+        <ion-card-subtitle color="dark">Escuela de Formación de Tecnólogos | Escuela politécnica Nacional
+        </ion-card-subtitle>
+        <ion-card-subtitle color="primary">17/05/2021 – 28/05/2021</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Introducción al diseño de prototipos de interfaces con Figma</ion-card-title>
+        <ion-card-subtitle color="dark">Escuela de Formación de Tecnólogos | Escuela politécnica Nacional
+        </ion-card-subtitle>
+        <ion-card-subtitle color="primary">17/05/2021 – 28/05/2021</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Introducción a la Seguridad Informática</ion-card-title>
+        <ion-card-subtitle color="dark">Escuela de Formación de Tecnólogos | Escuela politécnica Nacional
+        </ion-card-subtitle>
+        <ion-card-subtitle color="primary">17/05/2021 – 28/05/2021</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Scrum Foundation Professional Certificate (SFPC) </ion-card-title>
+        <ion-card-subtitle color="dark">CertiProf-Professional Knowledge </ion-card-subtitle>
+        <ion-card-subtitle color="primary">20/08/2021 – 22/08/2021 </ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Introducción al Desarrollo Web I y II</ion-card-title>
+        <ion-card-subtitle color="dark">Google Activate</ion-card-subtitle>
+        <ion-card-subtitle color="primary">01/09/2021 – 27/09/2021 </ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Desarrollo de Apps Móviles </ion-card-title>
+        <ion-card-subtitle color="dark">Google Activate</ion-card-subtitle>
+        <ion-card-subtitle color="primary">01/09/2021 – 26/09/2021 </ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+  </ion-infinite-scroll>
 </ion-content>
