--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -16,18 +16,27 @@
   <app-explore-container name="Tab 4 page"></app-explore-container>
 
 
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title><strong>Competencias de Idiomas</strong></ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  <div class="title">
+
+    <ion-title>Ingles</ion-title>
+  </div>
   <ion-grid>
     <ion-row>
       <ion-col size="12" class="col1">
 
         <ion-row class="col2">
-          <ion-col size="4">
+          <ion-col size="6">
             <div>
-              texto
+              Comprensión Auditiva
             </div>
           </ion-col>
           <ion-col>
-            <ion-progress-bar color="secondary" class="progress" value="0.5"></ion-progress-bar>
+            <ion-progress-bar color="secondary" class="progress" value="0.75"></ion-progress-bar>
           </ion-col>
         </ion-row>
       </ion-col>
@@ -36,13 +45,13 @@
       <ion-col size="12" class="col1">
 
         <ion-row class="col2">
-          <ion-col size="4">
+          <ion-col size="6">
             <div>
-              texto
+              Comprensión Lectora
             </div>
           </ion-col>
           <ion-col>
-            <ion-progress-bar color="secondary" class="progress" value="0.5"></ion-progress-bar>
+            <ion-progress-bar color="secondary" class="progress" value="0.75"></ion-progress-bar>
           </ion-col>
         </ion-row>
       </ion-col>
@@ -51,13 +60,13 @@
       <ion-col size="12" class="col1">
 
         <ion-row class="col2">
-          <ion-col size="4">
+          <ion-col size="6">
             <div>
-              texto
+              Producción e Interaccion oral
             </div>
           </ion-col>
           <ion-col>
-            <ion-progress-bar color="secondary" class="progress" value="0.5"></ion-progress-bar>
+            <ion-progress-bar color="secondary" class="progress" value="0.75" buffer="1"></ion-progress-bar>
           </ion-col>
         </ion-row>
       </ion-col>
@@ -66,25 +75,41 @@
       <ion-col size="12" class="col1">
 
         <ion-row class="col2">
-          <ion-col size="4">
+          <ion-col size="6">
             <div>
-              texto
+              Expresión Escrita
             </div>
           </ion-col>
           <ion-col>
-            <ion-progress-bar color="secondary" class="progress" value="0.5"></ion-progress-bar>
+            <ion-progress-bar color="secondary" class="progress" value="0.75"></ion-progress-bar>
           </ion-col>
         </ion-row>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <div class="comp">
-    <div class="text">
 
-    </div>
-    <div class="prog">
-
-    </div>
-  </div>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title><strong>Competencias Digitales</strong></ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  <ion-grid>
+      <ion-label>Trabajo en equipo </ion-label>
+      <ion-row><ion-label>- Responsabilidad en el trabajo </ion-label></ion-row>
+      <ion-row><ion-label>- Organizacin y puntualidad </ion-label></ion-row>
+      <ion-row><ion-label>- Muy buenos conocimientos del paquete Office(Word, Excel, Powerpoint) </ion-label></ion-row>
+      <ion-row><ion-label>- Dominio de herramientas de google(Gmail Drive Google forms etc) </ion-label></ion-row>
+      <ion-row><ion-label>- Capacidad de autoaprendizaje </ion-label></ion-row>
+      <ion-row><ion-label>- Capacidad de aprendizaje rápido y trabajo en equipo </ion-label></ion-row>
+      <ion-row><ion-label>- Capacidad de resolución de problemas </ion-label></ion-row>
+      <ion-row><ion-label>- Conocimientos de lenguaje C, C++, Java, Python, Ada, HTML, CSS </ion-label></ion-row>
+      <ion-row><ion-label>- JavaScript básico </ion-label></ion-row>
+      <ion-row><ion-label>- Firebase Firestore </ion-label></ion-row>
+      <ion-row><ion-label>- Firebase Storage</ion-label></ion-row>
+      <ion-row><ion-label>- Android(Android Studio)</ion-label></ion-row>
+      <ion-row><ion-label>- Git, Github y Subversión </ion-label></ion-row>
+      <ion-row><ion-label>- Mockups y prototipado</ion-label></ion-row>
+      <ion-row><ion-label>- UI / UX </ion-label></ion-row>
+  </ion-grid>
 
 </ion-content>
