--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -17,3 +17,8 @@ $principalColor :#0B8E76;
     justify-items: center;
     align-items: center;
 }
+.title{
+    justify-content:center;
+    align-content: center;
+    align-items: center;
+}
